<resources>
    <string name="app_name">Peliculas</string>
    <string name="peli1">The Batman</string>
    <string name="peli2">Sonic 2 La pelicula</string>
    <string name="peli3">Uncharted: Fuera del mapa</string>
    <string name="peli4">Spider-Man: No way home</string>
    <string name="peli5">Doctor Stranger: in the MULTIVERSE OF MADNESS</string>


    <string name="peli1_sinop">El wey disfrazado de murcielago que no te mata pero te deja en coma despues de una golpiza y en su segundo año luchando contra el crimen, Batman explora la corrupción existente en la ciudad de Gotham y el vínculo de esta con su propia familia. Además, entrará en conflicto con un asesino en serie conocido como "el Acertijo"</string>
    <string name="peli2_sinop">Celebrando la alegría de estar de vuelta con tus mejores amigos, el equipo de idiotas original regresa para otra ronda de situaciones hilarantes, tremendamente absurdas y, a menudo peligrosas con un poco de ayuda de un emocionante nuevo elenco.</string>
    <string name="peli3_sinop"> El cazador de tesoros Victor Sullivan recluta a Nathan Drake para que lo ayude a recuperar una fortuna de 500 años. Lo que comienza como un atraco se convierte en una carrera de trotamundos para alcanzar el premio.</string>
    <string name="peli4_sinop">Tras descubrirse la identidad secreta de Peter Parker como Spider-Man, la vida del joven se vuelve una locura. Peter decide pedirle ayuda al Doctor Extraño para recuperar su vida. Pero algo sale mal y provoca una fractura en el multiverso.</string>
    <string name="peli5_sinop">Ahora que Iron Man y el Capitán América se han ido tras la feroz batalla en Avengers: Endgame, se espera que el ex cirujano y mago más fuerte de todos, el Doctor Strange, tenga un papel activo como figura central en los Vengadores. Sin embargo, usar su magia para manipular el tiempo y el espacio a voluntad con un hechizo prohibido, que es considerado el más peligroso, ha abierto la puerta a una misteriosa locura llamada el Multiverso. Para restaurar un mundo en el que todo está cambiando, Strange busca la ayuda de su aliado Wong, el Hechicero Supremo, y la Avenger más poderosa, Wanda, la Bruja Escarlata. Pero una terrible amenaza se cierne sobre la humanidad y el universo entero que ya no puede ser superada por su poder. Lo más sorprendente es que la mayor amenaza del universo se ve exactamente igual que Doctor Strange</string>
    <string name="title_activity_pelicula">PeliculaActivity</string>

    <string name="nombre_cine">CINEPOLLOS</string>

    <string name="nombre_series">SERIESPIRATAS</string>


    <string name="serie1">The mandalorian</string>
    <string name="serie2">Cobra Kai</string>
    <string name="serie3">The Boys</string>
    <string name="serie4">The Witcher</string>
    <string name="serie5">Invecible</string>


    <string name="serie_sinop1">El Mandaloriano se ubica tras la caída del Imperio y antes de que la Primera Orden surja. En la serie seguimos las aventuras de un pistolero solitario en los confines de la galaxia, lejos de la autoridad de la Nueva República.</string>
    <string name="serie_sinop2">Cobra Kai es la secuela de la famosa saga cinematográfica Karate Kid. La serie sigue la historia 30 años después del campeonato de 1984, en el que Johnny no se encuentra en el mejor momento de su vida por lo que decide volver a abrir el famoso Dojo Cobra Kai para darle un giro.</string>
    <string name="serie_sinop3">The Boys es la adaptación televisiva de la obra de Garth Ennis que presenta un mundo superheróico donde los héroes están corrompidos por la fama. Esta actitud cegada y de alta celebridad les lleva a poner en peligro al mundo más de una vez.</string>
    <string name="serie_sinop4">El brujo Geralt, un cazador de monstruos, trata de encontrar su lugar en un mundo en el que las personas suelen ser más malvadas que las bestias.</string>
    <string name="serie_sinop5">Markus Sebastian "Mark" Grayson era un chico normal y corriente de instituto, la única diferencia respecto a los demás es que su padre, Nolan Grayson, es Omni-Man, uno de los superhéroes más poderosos de la Tierra y perteneciente al supergrupo The Guardians of the Globe. A la edad de 16 años, Mark comienza a desarrollar superpoderes y comienza a trabajar como superhéroe bajo la tutela de su padre. Ocasionalmente Mark colabora con un superequipo llamado Teen Team formado por Robot, Rex Splode, Dupli-Kate y Atom Eve.</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Peliculas</string>
    <string name="menu_gallery">Series</string>
    <string name="menu_slideshow">Favoritos</string>
</resources>