<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seriesActivity"
    android:background="@color/Azul_Clarito">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="412dp"
        android:layout_height="40dp"
        android:text="@string/nombre_series"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@color/Azul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_serie"
        android:layout_width="268dp"
        android:layout_height="282dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/the_mandalorian" />

    <TextView
        android:id="@+id/tv_nombreS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/serie1"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_serie" />

    <TextView
        android:id="@+id/tv_sinopS"
        android:layout_width="393dp"
        android:layout_height="213dp"
        android:layout_marginTop="16dp"
        android:text="@string/serie_sinop1"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombreS" />
</androidx.constraintlayout.widget.ConstraintLayout>